[package]
name = "total-set"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec-collections = "0.3.3"
smallvec = "1.4.2"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
