[package]
name = "negatable-set"
description = "Wrapper for sets that allows full boolean operations including negation"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"
repository = "https://github.com/rklaehn/negatable-set"
license = "MIT OR Apache-2.0"
keywords = ["set", "negation"]
categories = ["data-structures"]
readme = "README.md"
homepage = "https://github.com/rklaehn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
vc = ["vec-collections", "smallvec"]

[dependencies.vec-collections]
default-features = false
optional = true
version = "0.3.3"

[dependencies.serde]
default-features = false
optional = true
version = "1"

[dependencies.smallvec]
default-features = false
optional = true
version = "1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
maplit = "1.0.2"
serde_json = "1.0.59"
vec-collections = "0.3.3"
